@@ -4,7 +4,7 @@
 ;;  Copyright (c) 2003 Time Intermedia Corporation, All rights reserved.
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: config.scm.in,v 1.18 2007/04/27 13:52:15 bizenn Exp $
+;; $Id: config.scm.in,v 1.19 2007/04/28 01:03:44 bizenn Exp $
 ;;
 ;; This is intended to be loaded by kahua servers to share common
 ;; configuration parameters.
@@ -35,6 +35,7 @@
 	  kahua-plugin-directory
 	  kahua-template-directory
 	  kahua-database-directory
+	  kahua-data-directory
 	  kahua-temporary-directory
 	  kahua-log-directory
 	  kahua-run-directory
@@ -55,6 +56,7 @@
 	  kahua-sockbase-abs-path
 	  kahua-tmpbase
 	  kahua-dbpath
+	  kahua-datapath
           kahua-logpath
 	  kahua-spvr-pidpath
           kahua-keyserv-pidpath
@@ -305,6 +307,9 @@
       (#/^efs:(.+)$/ (#f path) #`"efs:,(db-full-path path)")      ; Extended Filesystem Database
       (#/^[\w]+:/   (#f)       dbpath)			          ; Other type Database(maybe DBI)
       (else                    #`"efs:,(db-full-path dbpath)")))) ; Extended Filesystem Database
+
+(define (kahua-datapath . els)
+  (apply build-path (kahua-data-directory) els))
 
 (define (kahua-logpath filename)
   (build-path (kahua-log-directory) filename))
